modified:   Account.html 	modified:   AccountStyle.css 	modified:   MainPage.html 	pic/banner_file.jpg

--- a/AccountStyle.css
+++ b/AccountStyle.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200&family=Kanit:wght@300&display=swap');
+
 * {
     font-family: 'Kanit', sans-serif;
 
 }
+img {
+            display: block;
+            margin: 0 auto;
+            max-width: 10%;
+            height: auto;
+            object-fit: contain;
+ }
