--- a/MainStyle.css
+++ b/MainStyle.css
@@ -3,3 +3,10 @@
     font-family: 'Kanit', sans-serif;
 
 }
+img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: auto ;
+            object-fit: contain;
+ }
