--- a/src/main/resources/static/AccountStyle.css
+++ b/src/main/resources/static/AccountStyle.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200&family=Kanit:wght@300&display=swap');
+git@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200&family=Kanit:wght@300&display=swap');
 
 * {
     font-family: 'Kanit', sans-serif;
