modified:   src/main/resources/static/Account.html 	modified:   src/main/resources/static/AccountStyle.css

--- a/src/main/resources/static/AccountStyle.css
+++ b/src/main/resources/static/AccountStyle.css
@@ -13,11 +13,79 @@ img {
  }
 
 .content {
-    width: 80%;
-      height: 500%;
-      /*margin-top: 20%*/
-      margin-left: 20%;
-      background-color: #3498db;
+    width: 75%;
+      height: 85%;
+      position: absolute;
+      margin-left: 23%;
+      margin-top: -25%;
+      background-color: white;
       border-radius: 20px;
-      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+      border-style: solid;
+      border-color: black;
+      border-width: 2px;
+}
+
+.dataAccount{
+    width: 95%;
+    height: 65%;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    background-color: white;
+    font-size: 20px;
+}
+
+.data{
+    margin-left: 2%;
+}
+
+.nameid{
+    margin-top: -21%;
+    margin-left: 15%;
+    font-size: 25px;
+}
+
+.navbar{
+    margin-left: 8%;
+    margin-top: 6%;
+}
+
+.sidebar {
+    background-color: white;
+    width: 15%;
+    padding: 1%;
+    border-radius: 20px;
+        border-style: solid;
+          border-color: black;
+          border-width: 2px;
+}
+
+.mainmenu a {
+    text-decoration: none;
+    color: red;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.mainmenu a:hover {
+    color: darkred;
+}
+
+hr {
+    border: none;
+    border-top: 1px solid #ccc;
+    margin: 5px 0;
+}
+
+.sub-menu a {
+    padding-left: 20px;
+}
+
+.sub-menu a {
+    font-size: 14px;
 }
