modified:   src/main/resources/static/AccountStyle.css

--- a/src/main/resources/static/AccountStyle.css
+++ b/src/main/resources/static/AccountStyle.css
@@ -25,7 +25,7 @@ img {
       margin-left: 23%;
       margin-top: -28%;
       margin-bottom: %;
-      background-color: white;
+      background-color: #F8F9F9;
       border-radius: 20px;
       border-style: solid;
       border-color: black;
@@ -44,7 +44,7 @@ img {
     border-style: solid;
     border-color: black;
     border-width: 2px;
-    background-color: white;
+    background-color: #F8F9F9;
     font-size: 20px;
 }
 
@@ -60,7 +60,7 @@ img {
 }
 
 .sidebar {
-    background-color: ;
+    background-color: #F8F9F9;
     width: 15%;
     padding: 1%;
     border-radius: 20px;
@@ -76,6 +76,7 @@ img {
     font-weight: bold;
     font-size: 18px;
     font-family: 'Kanit', sans-serif;
+    padding: 5% 0;
 }
 
 .mainmenu a:hover {
